# taskflowbot

./: .coveragerc  .gitignore  Procfile  README.md  README.rst  requirements.txt  setup.cfg  setup.py
doc/source/: conf.py  index.rst  installation.rst  usage.rst
releasenotes/source/: conf.py  index.rst
taskflowbot/: __init__.py
taskflowbot/cmd/: __init__.py  rtmbot.conf  taskflow.py  taskflowrtm.py
taskflowbot/core/: bot.py  service.py
taskflowbot/tests/: base.py  test_taskflowbot.py
