[metadata]
name = taskflowbot
summary = Just another lazy bot
description-file =
    README.rst
author = Hieu LE
author-email = hieulq19@gmail.com
home-page = http://vietstack.com/
classifier =
    Environment :: Linux
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    taskflowbot

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = taskflowbot/locale
domain = taskflowbot

[update_catalog]
domain = taskflowbot
output_dir = taskflowbot/locale
input_file = taskflowbot/locale/taskflowbot.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = taskflowbot/locale/taskflowbot.pot
